tdf#143475 consider Word 2007 rotated image speciality

Usually Word relates effectExtent to a rectangle with swapped width and
height, if the object rotation is between 45deg and 135deg. But Word
2007 (=version 12) makes an exception for images (bug?).
The patch determines the version from compatibility setting and
calculates wrap margins and effectExtent values considering this
special feature of Word 2007.

I have moved the part for getting the Word version from InteropGrabBag
from the local function lcl_getWordCompatibilityMode to DocxExport,
because I need it exactly the same way in docxsdrexport.cxx.

Change-Id: Icc2f3d0710e29207413fb3810d281a0fd7d82002