sw/source/filter/ww8/docxattributeoutput.cxx
@@ -3842,55 +3842,12 @@ OString lcl_padStartToLength(OString const & aString, sal_Int32 nLen, char cFill
 //Keep this function in-sync with the one in writerfilter/.../SettingsTable.cxx
 //Since this is not import code, "-1" needs to be handled as the mode that LO will save as.
 //To identify how your code should handle a "-1", look in DocxExport::WriteSettings().
-sal_Int32 lcl_getWordCompatibilityMode( const SwDoc& rDoc )
+sal_Int32 lcl_getWordCompatibilityMode(const DocxExport& rDocExport)
 {
-    uno::Reference< beans::XPropertySet >     xPropSet( rDoc.GetDocShell()->GetBaseModel(), uno::UNO_QUERY_THROW );
-    uno::Reference< beans::XPropertySetInfo > xPropSetInfo = xPropSet->getPropertySetInfo();
-
-    sal_Int32 nWordCompatibilityMode = -1;
-    if ( xPropSetInfo->hasPropertyByName( UNO_NAME_MISC_OBJ_INTEROPGRABBAG ) )
-    {
-        uno::Sequence< beans::PropertyValue > propList;
-        xPropSet->getPropertyValue( UNO_NAME_MISC_OBJ_INTEROPGRABBAG ) >>= propList;
-
-        for ( const auto& rProp : std::as_const(propList) )
-        {
-            if ( rProp.Name == "CompatSettings" )
-            {
-                css::uno::Sequence< css::beans::PropertyValue > aCurrentCompatSettings;
-                rProp.Value >>= aCurrentCompatSettings;
-
-                for ( const auto& rCurrentCompatSetting : std::as_const(aCurrentCompatSettings) )
-                {
-                    uno::Sequence< beans::PropertyValue > aCompatSetting;
-                    rCurrentCompatSetting.Value >>= aCompatSetting;
-
-                    OUString sName;
-                    OUString sUri;
-                    OUString sVal;
-
-                    for ( const auto& rPropVal : std::as_const(aCompatSetting) )
-                    {
-                        if ( rPropVal.Name == "name" ) rPropVal.Value >>= sName;
-                        if ( rPropVal.Name == "uri" )  rPropVal.Value >>= sUri;
-                        if ( rPropVal.Name == "val" )  rPropVal.Value >>= sVal;
-                    }
-
-                    if ( sName == "compatibilityMode" && sUri == "http://schemas.microsoft.com/office/word" )
-                    {
-                        const sal_Int32 nValidMode = sVal.toInt32();
-                        // if repeated, highest mode wins in MS Word. 11 is the first valid mode.
-                        if ( nValidMode > 10 && nValidMode > nWordCompatibilityMode )
-                            nWordCompatibilityMode = nValidMode;
-
-                    }
-                }
-            }
-        }
-    }
+    sal_Int32 nWordCompatibilityMode = rDocExport.getWordCompatibilityModeFromGrabBag();
 
     // TODO: this is duplicated, better store it in DocxExport member?
-    if (!rDoc.getIDocumentSettingAccess().get(DocumentSettingId::ADD_EXT_LEADING))
+    if (!rDocExport.m_rDoc.getIDocumentSettingAccess().get(DocumentSettingId::ADD_EXT_LEADING))
     {
         if (nWordCompatibilityMode == -1 || 14 < nWordCompatibilityMode)
         {
@@ -4217,7 +4174,7 @@ void DocxAttributeOutput::TableDefinition( ww8::WW8TableNodeInfoInner::Pointer_t
             // tdf#106742: since MS Word 2013 (compatibilityMode >= 15), top-level tables are handled the same as nested tables;
             // if no compatibilityMode is defined (which now should only happen on a new export to .docx),
             // LO uses a higher compatibility than 2010's 14.
-            sal_Int32 nMode = lcl_getWordCompatibilityMode( m_rExport.m_rDoc );
+            sal_Int32 nMode = lcl_getWordCompatibilityMode(m_rExport);
 
             const SwFrameFormat* pFrameFormat = pTableTextNodeInfoInner->getTableBox()->GetFrameFormat();
             if ((0 < nMode && nMode <= 14) && m_tableReference->m_nTableDepth == 0)
