sw/source/filter/ww8/docxexport.hxx
@@ -303,6 +303,9 @@ public:
     // Get author id to remove personal info
     size_t GetInfoID( const OUString sPersonalInfo ) const { return m_pAuthorIDs->GetInfoID(sPersonalInfo); }
 
+    // needed in docxsdrexport.cxx and docxattributeoutput.cxx
+    sal_Int32 getWordCompatibilityModeFromGrabBag() const;
+
 private:
     DocxExport( const DocxExport& ) = delete;
 
