writerfilter/source/dmapper/GraphicImport.hxx
@@ -126,6 +126,7 @@ public:
 
     void handleWrapTextValue(sal_uInt32 nVal);
     void lcl_expandRectangleByEffectExtent(css::awt::Point& rLeftTop, css::awt::Size& rSize);
+    void lcl_correctWord2007EffectExtent(const sal_Int32 nMSOAngle);
 };
 
 typedef tools::SvRef<GraphicImport> GraphicImportPtr;
